<resources>
    <string name="app_name" translatable="false">ExSonhk</string>
    <string name="fbtn_des">Floating btn</string>
    <string name="tablayout_des">TabLayout</string>
    <string name="viewpager_des">ViewPager</string>
    <string name="option_delete">Delete Item</string>
    <string name="option_edit">Edit Item</string>
    <string name="option_add">Add Item</string>
    <string name="title_handle_data">Home Action</string>
    <string name="hint_edt_new_text">Enter new text</string>
    <string name="hint_edt_position">Enter position</string>
    <string name="show_details">Show Details</string>
    <string name="share_file">Share File</string>
    <string name="rename_file">Rename File</string>
    <string name="add_item">Add Item</string>
    <string name="edit_item">Edit Item</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="delete_item">Delete Item</string>
    <string name="item">"Item : "</string>
    <string name="error">"Error : "</string>
    <string name="enter_data">Enter Data</string>
    <string name="st_frg">1</string>
    <string name="nd_frg">2</string>
    <string name="rd_frg">3</string>
    <string name="st_tab">Tab 1</string>
    <string name="nd_tab">Tab 2</string>
    <string name="rd_tab">Tab 3</string>
    <string name="fragment_one">Fragment One</string>
    <string name="fragment_two">Fragment Two</string>
    <string name="facebook">FACEBOOK</string>
    <string name="login">Login</string>
    <string name="first_number">Số hạng 1</string>
    <string name="second_number">Số hạng 2</string>
    <string name="email_or_phone">Email or Phone</string>
    <string name="password">Password</string>
    <string name="plus">+</string>
    <string name="subtract">-</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="personal_information">Thông tin cá nhân</string>
    <string name="fullname">Họ Tên</string>
    <string name="name_must_more_than_3_word">Tên phải >=3 ký tự</string>
    <string name="id_card">CMND</string>
    <string name="input_correct_nine_number">Nhập đúng 9 chữ số</string>
    <string name="degree">Degree</string>
    <string name="intermediate_level">Trung Cấp</string>
    <string name="college_level">Cao Đẳng</string>
    <string name="university_level">Đại Học</string>
    <string name="hobby">Sở Thích</string>
    <string name="read_news">Đọc báo</string>
    <string name="read_book">Đọc sách</string>
    <string name="read_code">Đọc Code</string>
    <string name="input_additional_info_can_null">"Nhập thông tin bổ sung - có thể để trống"</string>
    <string name="send_data">Gữi Thong Tin</string>
    <string name="additional_info">Thông tin bổ sung</string>
    <string name="reuslt">Kết quả:</string>
    <string name="exercise_update_info">Update Infor Exercise</string>
    <string name="exercise_calculate">Exercise Calculate</string>
    <string name="exercise_login">Exercise Login</string>
    <!--  string for is3-->
    <string name="login_success">Login success</string>
    <string name="send_success">Submitted successfully</string>
    <string name="email_invalid">Email is invalid</string>
    <string name="password_invalid">Mật khẩu phải lớn hơn 8 ký tự gồm chữ thường, số, ký tự đặc biệt</string>
    <string name="password_missing_normal_character">Missing normal character\n</string>
    <string name="password_missing_special_character">Missing special character\n</string>
    <string name="password_missing_number">Missing number\n</string>
    <string name="password_must_more_than_8">Password must more than 8 character\n</string>
    <string name="this_field_cant_empty">This field cant empty\n</string>
    <string name="result">"Kết quả: "</string>
    <string name="result_float_param">Ket qua: %f</string>
    <string name="length_name_must_more_than_3_character">Length name must more than 3 character</string>
    <string name="length_id_must_be_9_character">Length id must be 9 character</string>
    <string name="info_must_more_than_100_character">Infor must more than 100 character </string>
    <string name="cant_divide_by_zero">Cannot divide by zero\n</string>
    <string name="pls_enter_the_first_number">Please enter the first number</string>
    <string name="pls_enter_the_second_number">Please enter the second number</string>
    <string name="submit_succes">Submit Success</string>
    <string name="email">Email</string>
    <string name="data_from_login">Data from login</string>
    <string name="data_from_update_info">Data from update info\n</string>
    <string name="name">Name</string>
    <string name="interest">Interest\n</string>
    <string name="more_info">More information\n</string>
    <string name="email_string_param">Email: %s\n</string>
    <string name="password_string_param">Password: %s</string>
    <string name="name_string_param">Name: %s\n</string>
    <string name="degree_string_param">Degree: %s</string>
    <string name="interest_string_param">Interst: %s</string>
    <string name="additional_info_string_param">Addtional Info : %s</string>
    <string name="id_string_param">ID: %s\n</string>
    <string name="fragment_argument">"Fragment/Argument "</string>
    <string name="name_of_issue_five">Tablayout/RecyclerView</string>
</resources>
