<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:background="@color/clHeader"
        android:text="@string/thong_tin_ca_nhan"
        android:textColor="@color/text_FFD700"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="8dp" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="40dp"
        android:text="@string/ho_ten"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHeader" />

    <EditText
        android:id="@+id/edtName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/name_must_more_than_3_word"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/tvHeader"
        app:layout_constraintStart_toEndOf="@id/tvName"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/tvID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="40dp"
        android:text="@string/cmnd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtName" />

    <EditText
        android:id="@+id/edtID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/input_correct_9_number"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/edtName"
        app:layout_constraintStart_toEndOf="@id/tvID"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/tvDegree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/degree"
        android:textColor="@color/text_FFD700"
        android:background="@android:color/holo_blue_dark"
        app:layout_constraintTop_toBottomOf="@id/edtID"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="8dp"
        android:layout_marginTop="16dp" />

    <RadioGroup
        android:id="@+id/rgDegree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/tvDegree"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/rbIntermediate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intermediate_level" />

        <RadioButton
            android:id="@+id/rbCollege"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/college_level" />

        <RadioButton
            android:id="@+id/rbUniversity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/university_level" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvHobby"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hobby"
        android:textAlignment="center"
        android:background="@android:color/holo_blue_dark"
        android:textColor="@color/text_FFD700"
        app:layout_constraintTop_toBottomOf="@id/rgDegree"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="8dp"
        android:layout_marginTop="16dp" />

    <LinearLayout
        android:id="@+id/llHobbies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/tvHobby"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp">

        <CheckBox
            android:id="@+id/cbReadingNews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/read_news" />

        <CheckBox
            android:id="@+id/cbReadingBooks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/read_book" />

        <CheckBox
            android:id="@+id/cbReadingCoding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/read_code" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvAdditionalInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/additional_info"
        android:textColor="@color/text_FFD700"
        android:background="@android:color/holo_blue_dark"
        app:layout_constraintTop_toBottomOf="@id/llHobbies"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="8dp"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/edtAdditionalInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:hint="@string/input_additional_info_can_null"
        android:inputType="textMultiLine"
        app:layout_constraintTop_toBottomOf="@id/tvAdditionalInfo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:minHeight="100dp" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_data"
        app:layout_constraintTop_toBottomOf="@id/edtAdditionalInfo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
